--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+        <script data-ad-client="ca-pub-5807586547562205" async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     </head>
     <body>
         <div id="root"></div>
